...
import androidx.hilt.navigation.compose.hiltViewModel
import com.baubap.loginexamen.R
import com.baubap.loginexamen.data.user.InvalidLoginException
import com.baubap.loginexamen.ui.components.*
import com.baubap.loginexamen.ui.theme.Dimens

const val EMAIL_TEST_TAG = "EMAIL_TEST_TAG"
const val PASSWORD_TEST_TAG = "PASSWORD_TEST_TAG"

@Composable
fun LoginScreen(
    viewModel: LoginViewModel = hiltViewModel()
) {
    val email by viewModel.email.collectAsState()
...
